<resources>
    <string name="app_name">360APP</string>
    <string name="btnStart">Start</string>
    <string name="btnLogin">Login</string>
    <string name="SWA_textView_swapNum">SWAP #</string>
    <string name="SWA_Title">Safe Work Agreement Permit</string>
    <string name="SWA_editText_swapNum">(yyyy/mm/dd 001,001,003, etc)</string>
    <string name="SWA_section0Header">Section 0 - Basic Info</string>
    <string name="SWA_textView_location">Location/UWI</string>
    <string name="SWA_textView_date">Date</string>
    <string name="SWA_textView_siteSupervisor">Site Supervisor</string>
    <string name="SWA_textView_companyReceiver">Company Permit Receiver Name</string>
    <string name="SWA_textView_receiver">Permit Receiver</string>
    <string name="SWA_textView_issuer">Permit Issuer</string>
    <string name="SWA_textView_sectionAHeader">Section A - Scope</string>
    <string name="SWA_textView_categories">Categories of Work (More than one may be selected)</string>
    <string name="SWA_checkBox_explosive">Explosive/Radioactive</string>
    <string name="SWA_checkBox_coldWork">Cold Work</string>
    <string name="SWA_checkBox_electrical">Electrical Work</string>
    <string name="SWA_checkBox_pressure">Pressure Systems</string>
    <string name="SWA_checkBox_heights">Working at Heights</string>
    <string name="SWA_checkBox_hotWork">Hot Work</string>
    <string name="SWA_checkBox_confined">Confined/Restricted Space Entry*</string>
    <string name="SWA_textView_confinedClarification">*The user of a confined spaces entry permit must also use the confined space entry permit supplement</string>
    <string name="SWA_textView_workDescription">Specific Work Description to be Done</string>
    <string name="SWA_textView_toolsEquipment">Tools/Equipment to be Used</string>
    <string name="SWA_textView_associatedDocuments">Associated Documents(List or Attach)</string>
    <string name="SWA_textView_precautionsVerifier">Work Precautions Verifier (Name and Company)</string>
    <string name="SWA_textView_precautionsVerifierClarifier">If not Wellsite Permit Authority, list name/role/company</string>
    <string name="SWA_textView_workPartyAcceptance">Work Party Acceptance</string>
    <string name="SWA_textView_acceptanceExplanation">I understand the work to be performed, the site and equipment to be worked on, all precautions and conditions prescribed for this permit and agree to abide by all the requirements of this permit</string>
    <string name="SWA_btn_sign">Sign</string>
    <string name="SWA_editText_time">Time</string>
    <string name="SWA_editText_workerName">Name</string>
    <string name="SWA_btn_addRecord">+</string>
    <string name="SWA_textView_sectionBHeader">Section B Work Precautions</string>
    <string name="SWA_textView_checklistsExplanation">All specified work precautions must be completed before work is commenced</string>
    <string name="SWA_textView_general">GENERAL: All Wellsite Permits</string>
    <string name="SWA_textView_checklistDescription">Work Precaution Checklist</string>
    <string name="SWA_textView_checklistRequired">Required?</string>
    <string name="SWA_textView_checklistInitial">Initial of Verifier</string>
    <string name="SWA_textView_fluidTagged">Fluid power locked out and tagged</string>
    <string name="SWA_textView_mechTagged">Mechanical power locked out and tagged</string>
    <string name="SWA_textView_electricalTagged">Electrical power locked out and tagged</string>
    <string name="SWA_textView_purged">Equipment drained/depressurized and purged</string>
    <string name="SWA_textView_procedure">Written procedure to be used (record procedure reference in Associated Documents in Section A)</string>
    <string name="SWA_textView_briefed">Work Party members briefed on work to be done</string>
    <string name="SWA_textView_JHA">Job Hazard Analysis (JHA) to be performed (list JHA in Associated Documents in Section A)</string>
    <string name="SWA_textView_cleared">Non-essential personnel cleared from work area</string>
    <string name="SWA_textView_gasDetection">Gas detection test required prior to work</string>
    <string name="SWA_textView_warningSigns">Warning signs posted at work location</string>
    <string name="SWA_textView_flaggedOff">Work area flagged off to exclude other personnel</string>
    <string name="SWA_textView_informed">All wellsite personnel informed of work to be done</string>
    <string name="SWA_textView_monitoring">Continuous gas monitoring</string>
    <string name="SWA_textView_generalGrounding">Grounding and bonding of equipment</string>
    <string name="SWA_textView_coldWork">Cold Work Permit</string>
    <string name="SWA_textView_survey">Excavation survey required</string>
    <string name="SWA_textView_liftPlan">Critical Lift Plan required</string>
    <string name="SWA_textView_hotWork">Hot Work Permit</string>
    <string name="SWA_textView_screen">Protective screen erected</string>
    <string name="SWA_textView_containment">Full spark containment</string>
    <string name="SWA_textView_drains">Drains covered</string>
    <string name="SWA_textView_watcher">Competent Fire Watcher on duty (name recorded in work party)</string>
    <string name="SWA_textView_combustible">Area free from combustible material</string>
    <string name="SWA_textView_extinguishers">Fire extinguishers placed in work area</string>
    <string name="SWA_textView_hoseCharged">Fire hose charged and available</string>
    <string name="SWA_textView_electricalWork">Electrical Work Permit</string>
    <string name="SWA_textView_capacitors">Capacitors discharged</string>
    <string name="SWA_textView_electricalIsolation">Isolations proved – correct item de-energized</string>
    <string name="SWA_textView_RCD">Residual current device (RCD) in place</string>
    <string name="SWA_textView_electricalGrounding">Grounding of equipment completed</string>
    <string name="SWA_textView_certification">Personnel certification available/reviewed</string>
    <string name="SWA_textView_electricalTagComplete">Lock-Out/Tag-Out Complete</string>
    <string name="SWA_textView_explosive">Explosive/Radioactive Permit</string>
    <string name="SWA_textView_areaDesignated">Storage area designated for explosives and Gas detection test required prior to work radioactive sources</string>
    <string name="SWA_textView_badgesWorn">Radiation badges worn and survey meter available</string>
    <string name="SWA_textView_groundingClamps">Grounding clamps in placed</string>
    <string name="SWA_textView_topDriveIsolated">Overhead power shutdown/top drive isolated</string>
    <string name="SWA_textView_weldingIsolated">Welding unit turned off and isolated</string>
    <string name="SWA_textView_cathodeIsolated">Cathodic protection turned off and isolated</string>
    <string name="SWA_textView_blasterTicket">Shot firers/blasters ticket</string>
    <string name="SWA_textView_radioSilence">Radio silence enforced</string>
    <string name="SWA_textView_checklistUsed">Perforating safety checklist to be used</string>
    <string name="SWA_textView_heights">Working at Heights Permit</string>
    <string name="SWA_textView_inertiaReel">Inspected and maintained inertia reel required</string>
    <string name="SWA_textView_toolLanyards">Hand tools secured by lanyards or similar</string>
    <string name="SWA_textView_trained">Personnel working at height trained Full spark containment and competent for working at height</string>
    <string name="SWA_textView_belowCleared">Area below the work cleared of all personnel</string>
    <string name="SWA_textView_heightsRescuePlan">Emergency rescue plan in place and recovery equipment available</string>
    <string name="SWA_textView_fallProtection">Fall prevention/protection equipment Fire extinguishers placed in work area In working order and personnel trained to use</string>
    <string name="SWA_textView_heightsPlanDeveloped">Working Heights Rescue Plan Developed</string>
    <string name="SWA_textView_pressureSystems">Pressure Systems Work Permit</string>
    <string name="SWA_textView_reliefDevices">Pressure relief devices in place and tested</string>
    <string name="SWA_textView_linesSecured">Pressure lines secured against movement</string>
    <string name="SWA_textView_lineBled">Bleed off line directed to safe area</string>
    <string name="SWA_textView_voidsChecked">Voids checked for trapped pressure</string>
    <string name="SWA_textView_compatibilityVerified">Hammer union compatibility verified</string>
    <string name="SWA_textView_commEstablished">System of communication established and tested</string>
    <string name="SWA_textView_confinedSpace">Confined/Restricted Space Entry Permit</string>
    <string name="SWA_textView_alternativeMethod">Can the task be done using any other method?</string>
    <string name="SWA_textView_locationPurged">Work location to be purged before entry</string>
    <string name="SWA_textView_riskAssesment">Documented risk assessment completed</string>
    <string name="SWA_textView_permitAttached">Confined space entry permit attached</string>
    <string name="SWA_textView_certified">Training certificate for person entering confined space</string>
    <string name="SWA_textView_standby">Stand by person</string>
    <string name="SWA_textView_respirator">Respirator or self-contained breathing apparatus</string>
    <string name="SWA_textView_confinedRescuePlan">Emergency rescue plan in place and recovery equipment available</string>
    <string name="SWA_textView_confinedPlanDeveloped">Confined Space Rescue Plan developed</string>
    <string name="SWA_textView_prestartGasDetection">Section B - Work Precautions - Prestart Gas Detection and Monitoring Record</string>
    <string name="SWA_textView_testerName">Gas Tester Name</string>
    <string name="SWA_textView_testerInitials">Tester Initials</string>
    <string name="SWA_textView_testTime">Time(24hr)</string>
    <string name="SWA_textView_testLEL">% LEL</string>
    <string name="SWA_textView_testCO">CO ppm</string>
    <string name="SWA_textView_testH2S">H₂S ppm</string>
    <string name="SWA_textView_testO2">% O₂</string>
    <string name="SWA_textView_testOtherGas">Other Gases</string>
    <string name="SWA_textView_isolationRecord">Section B - Isolation Record</string>
    <string name="SWA_textView_isolationDescription">Description of Isolation</string>
    <string name="SWA_textView_tagNum">Lock/Tag Number</string>
    <string name="SWA_textView_lockLocation">Location of Lock/Tag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>